--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     "prismic-next": "^0.0.1",
     "prismic-reactjs": "0.3.1",
     "randomcolor": "^0.5.3",
-    "react": "^16.3.2",
+    "react": "16",
     "react-animate-height": "2.0.1",
     "react-dom": "^16.3.2",
+    "react-grid-system": "4.3.1",
     "react-prismic": "^0.6.1",
     "react-redux": "5.0.7",
     "react-soundplayer": "1.0.4",
