--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-prismic": "^0.6.1",
     "react-redux": "5.0.7",
     "react-soundplayer": "1.0.4",
+    "react-typekit": "1.1.3",
     "redux": "4.0.0",
     "redux-devtools-extension": "2.13.2",
     "redux-thunk": "2.2.0",
