Biography merged to Prismic.

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "next-redux-wrapper": "2.0.0",
     "next-routes": "1.4.2",
     "node-sass": "4.9.4",
-    "prismic-javascript": "1.5.0-beta.3",
+    "prismic-javascript": "1.5.0",
     "prismic-next": "^0.0.1",
     "prismic-reactjs": "0.3.1",
     "randomcolor": "^0.5.3",
