--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-cursor-position": "3.0.3",
     "react-device-detect": "1.6.1",
     "react-dom": "^16.3.2",
+    "react-ga": "2.5.3",
     "react-grid-system": "4.3.1",
     "react-prismic": "^0.6.1",
     "react-redux": "5.0.7",
