Replaced homepage with Slick

--- a/package.json
+++ b/package.json
@@ -41,12 +41,14 @@
     "react-infinite-scroller": "1.2.2",
     "react-prismic": "^0.6.1",
     "react-redux": "5.0.7",
+    "react-slick": "0.23.2",
     "react-soundplayer": "1.0.4",
     "react-typekit": "1.1.3",
     "react-video-cover": "1.2.0",
     "redux": "4.0.0",
     "redux-devtools-extension": "2.13.5",
     "redux-thunk": "2.2.0",
+    "slick-carousel": "1.8.1",
     "sort-array": "2.0.0",
     "sort-by": "1.2.0",
     "sort-object": "3.0.2",
