--- a/now.json
+++ b/now.json
@@ -1,4 +1,8 @@
 {
   "version": 1,
-  "alias": ["mwdwrd.com", "www.mwdwrd.com"]
+  "alias": ["mwdwrd.com", "www.mwdwrd.com"],
+  "github": {
+    "enabled": false
+  },
+  "NOW_GITHUB_NODE_ENV": "production"
 }
